fix input row on tablets

--- a/src/scss/_transactions.scss
+++ b/src/scss/_transactions.scss
@@ -40,6 +40,9 @@ input {
     }
   }
 
+  .dropdown-container {
+    text-wrap: nowrap;
+  }
   .input-row {
     align-items: center;
     display: flex;
@@ -47,13 +50,21 @@ input {
     justify-content: flex-end;
 
     .search-bar {
-      margin-right: auto;
+      flex: 1;
       position: relative;
 
+      input {
+        padding-right: calc(var(--spacing-lg) + calc(2 * var(--spacing-md)));
+        width: 100%;
+        color: red;
+      }
+
       input::placeholder {
+        // TODO: fix textoverflow to elipsis
         @include fonts.textpreset4;
         color: variables.$biege-500;
       }
+
       svg {
         position: absolute;
         right: var(--spacing-lg);
@@ -117,6 +128,7 @@ input {
     .input-row {
       .search-bar {
         flex: 1;
+        margin-right: auto;
         max-width: 320px;
 
         input {
